# glassforge

./: .gitignore  LICENSE  README.md  package.json
.github/workflows/: build.yml  release.yml
docs/superpowers/plans/: 2026-04-18-voice-command.md
docs/superpowers/specs/: 2026-04-18-voice-command-design.md
flatpak/: com.glassforge.app.metainfo.xml  com.glassforge.app.yml
src/: App.module.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecar/: requirements.txt  voice_sidecar.py
src-tauri/src/: attachments.rs  lib.rs  skills.rs
src-tauri/src/catalog/: actions.rs  installed.rs  marketplace.rs  mod.rs  types.rs
src-tauri/src/claude/: history.rs  mod.rs  perm_hook.py  permissions.rs  session.rs  usage.rs
src-tauri/src/kde/: blur.rs  mod.rs
src-tauri/src/voice/: commands.rs  mod.rs
src/components/layout/: MainPanel.module.css  MainPanel.tsx  Sidebar.module.css  Sidebar.tsx  TopBar.module.css  TopBar.tsx
src/components/sessions/: ChatView.module.css  ChatView.tsx  ComposeInput.module.css  ComposeInput.tsx  PermissionModal.module.css  ProjectsTree.tsx  (+6 more)
src/hooks/: useKeyboardShortcuts.ts  useSessionEvents.ts  useVoiceConversation.ts  useVoicePermission.ts  useVoiceResponse.ts
src/lib/: ansi.ts  log.ts  pricing.ts  tauri-commands.ts  theme.ts  types.ts
src/stores/: catalogStore.ts  limitsStore.ts  preferencesStore.ts  projectHistoryStore.ts  sessionNamesStore.ts  sessionStore.ts  themeStore.ts  voiceStore.ts
src/styles/: theme.css
src/voice-hud/: VoiceHud.module.css  VoiceHud.tsx
(+21 files in other folders)
